--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
     background-color: var(--bg);
 }
-.test {
+.center {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -59,7 +59,7 @@ h1 {
     margin-top: -2px;
     user-select: none;
 }
-.test1 {
+.home {
     color: var(--text);
     margin-top: -2px;
     text-decoration: none;
